--- a/office31_TF.ipynb
+++ b/office31_TF.ipynb
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bjm8Z5MlEv57",
-        "outputId": "82003a09-2389-48b5-9691-a5ee5ac0ee3b"
+        "outputId": "594d5c94-5440-481a-a017-aea79446def3"
       },
       "source": [
         "!nvidia-smi"
@@ -42,7 +42,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Sun Mar 21 02:21:57 2021       \n",
+            "Sun Mar 21 04:31:12 2021       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.56       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -51,7 +51,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   73C    P8    12W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   54C    P8    10W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -92,7 +92,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "12b328ba-ee08-408d-a861-f118db60003b"
+        "outputId": "6d8254c1-bcd0-4fec-a2d2-b39bbf96dc71"
       },
       "source": [
         "!git clone https://github.com/tim-learn/SHOT.git"
@@ -102,7 +102,13 @@
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'SHOT' already exists and is not an empty directory.\n"
+            "Cloning into 'SHOT'...\n",
+            "remote: Enumerating objects: 24, done.\u001b[K\n",
+            "remote: Counting objects: 100% (24/24), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
+            "remote: Total 227 (delta 11), reused 15 (delta 6), pack-reused 203\u001b[K\n",
+            "Receiving objects: 100% (227/227), 489.24 KiB | 24.46 MiB/s, done.\n",
+            "Resolving deltas: 100% (97/97), done.\n"
           ],
           "name": "stdout"
         }
@@ -115,7 +121,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c719e931-b4c8-4060-8465-7983ef9e0842"
+        "outputId": "c29e3028-8dba-496e-f526-a07a6678730e"
       },
       "source": [
         "cd SHOT/object/"
@@ -147,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w_FRkX5XjH0Y",
-        "outputId": "c785ca8d-b7b8-4e83-c481-9e46a07add29"
+        "outputId": "1f8c9512-a68c-4869-fcf0-a2168122efdc"
       },
       "source": [
         "!gdown  https://drive.google.com/uc?id=0B4IapRTv9pJ1WGZVd1VDMmhwdlE"
@@ -160,7 +166,7 @@
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=0B4IapRTv9pJ1WGZVd1VDMmhwdlE\n",
             "To: /content/SHOT/object/domain_adaptation_images.tar.gz\n",
-            "77.2MB [00:00, 186MB/s]\n"
+            "77.2MB [00:01, 72.0MB/s]\n"
           ],
           "name": "stdout"
         }
@@ -173,7 +179,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2M65nQGujHaZ",
-        "outputId": "adf8650f-d801-4445-ea6e-93ccbd4d9ca6"
+        "outputId": "43d1eeb1-eec5-4afe-9cf1-1c9e4e9d1f64"
       },
       "source": [
         "!tar -xvzf domain_adaptation_images.tar.gz"
@@ -4305,7 +4311,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8IwIRCx4kgIq",
-        "outputId": "5c160d26-ddb2-4bc7-fe20-a5d3c4b54050"
+        "outputId": "e631a2f1-606f-4e5c-cabe-a0c043d82d84"
       },
       "source": [
         "ll"
@@ -4315,23 +4321,21 @@
         {
           "output_type": "stream",
           "text": [
-            "total 75512\n",
-            "drwxr-xr-x 3 root     4096 Mar 21 00:09 \u001b[0m\u001b[01;34mamazon\u001b[0m/\n",
-            "drwxr-xr-x 3 root     4096 Mar 21 00:09 \u001b[01;34mdata\u001b[0m/\n",
-            "-rw-r--r-- 1 root     2797 Mar 21 00:09 data_list.py\n",
-            "-rw-r--r-- 1 root 77187046 Mar 21 02:22 domain_adaptation_images.tar.gz\n",
-            "drwxr-xr-x 3 root     4096 Mar 21 00:09 \u001b[01;34mdslr\u001b[0m/\n",
-            "-rw-r--r-- 1 root     9903 Mar 21 00:09 image_multisource.py\n",
-            "-rw-r--r-- 1 root    14024 Mar 21 00:09 image_multitarget.py\n",
-            "-rw-r--r-- 1 root    11369 Mar 21 00:09 image_pretrained.py\n",
-            "-rw-r--r-- 1 root    16232 Mar 21 00:09 image_source.py\n",
-            "-rw-r--r-- 1 root    16393 Mar 21 00:09 image_target_oda.py\n",
-            "-rw-r--r-- 1 root    15741 Mar 21 00:09 image_target.py\n",
-            "-rw-r--r-- 1 root     3361 Mar 21 00:09 loss.py\n",
-            "-rw-r--r-- 1 root     5193 Mar 21 00:09 network.py\n",
-            "drwxr-xr-x 2 root     4096 Mar 21 00:10 \u001b[01;34m__pycache__\u001b[0m/\n",
-            "-rw-r--r-- 1 root     3312 Mar 21 00:09 run.sh\n",
-            "drwxr-xr-x 3 root     4096 Mar 21 00:09 \u001b[01;34mwebcam\u001b[0m/\n"
+            "total 75504\n",
+            "drwxr-xr-x 3 root     4096 Mar 21 04:31 \u001b[0m\u001b[01;34mamazon\u001b[0m/\n",
+            "-rw-r--r-- 1 root     2797 Mar 21 04:31 data_list.py\n",
+            "-rw-r--r-- 1 root 77187046 Mar 21 04:31 domain_adaptation_images.tar.gz\n",
+            "drwxr-xr-x 3 root     4096 Mar 21 04:31 \u001b[01;34mdslr\u001b[0m/\n",
+            "-rw-r--r-- 1 root     9903 Mar 21 04:31 image_multisource.py\n",
+            "-rw-r--r-- 1 root    14024 Mar 21 04:31 image_multitarget.py\n",
+            "-rw-r--r-- 1 root    11369 Mar 21 04:31 image_pretrained.py\n",
+            "-rw-r--r-- 1 root    16232 Mar 21 04:31 image_source.py\n",
+            "-rw-r--r-- 1 root    16393 Mar 21 04:31 image_target_oda.py\n",
+            "-rw-r--r-- 1 root    15741 Mar 21 04:31 image_target.py\n",
+            "-rw-r--r-- 1 root     3361 Mar 21 04:31 loss.py\n",
+            "-rw-r--r-- 1 root     5193 Mar 21 04:31 network.py\n",
+            "-rw-r--r-- 1 root     3312 Mar 21 04:31 run.sh\n",
+            "drwxr-xr-x 3 root     4096 Mar 21 04:31 \u001b[01;34mwebcam\u001b[0m/\n"
           ],
           "name": "stdout"
         }
@@ -4510,13 +4514,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YkaP1g3nZPyG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YkaP1g3nZPyG",
+        "outputId": "f73b2780-6f5d-4196-cc80-1efff783e4b1"
       },
       "source": [
         "!pip install -q -U tensorflow-addons"
       ],
       "execution_count": 11,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[K     |████████████████████████████████| 706kB 2.7MB/s \n",
+            "\u001b[?25h"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -4525,7 +4542,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cRAqwnOBM5D4",
-        "outputId": "51aeac62-df32-4ac4-c625-8fcf17850be3"
+        "outputId": "9100f1b7-c8d8-4263-aa08-be3add7b6d98"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -4585,7 +4602,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a4d1ca2c-5c83-4c14-cbad-a1dba1f4dfb1"
+        "outputId": "38083d9c-d1f6-4319-d2c2-f4a018061324"
       },
       "source": [
         "model = create_model()\n",
@@ -4596,6 +4613,8 @@
         {
           "output_type": "stream",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "94773248/94765736 [==============================] - 0s 0us/step\n",
             "Model: \"model\"\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
@@ -4990,7 +5009,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "41359685-4453-406a-e225-31f27ad1fc53"
+        "outputId": "287a75f7-325a-4725-e612-d618c6974665"
       },
       "source": [
         "model.losses"
@@ -5067,7 +5086,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vTbYbwutEg-G",
-        "outputId": "6905927f-647b-4f67-c20a-b20d28809a13"
+        "outputId": "848a82d0-8569-4f4a-d15d-2ca12b3f6880"
       },
       "source": [
         "model.losses"
@@ -5131,7 +5150,7 @@
               " <tf.Tensor: shape=(), dtype=float32, numpy=0.324092>,\n",
               " <tf.Tensor: shape=(), dtype=float32, numpy=0.2635883>,\n",
               " <tf.Tensor: shape=(), dtype=float32, numpy=0.22761634>,\n",
-              " <tf.Tensor: shape=(), dtype=float32, numpy=0.45589516>]"
+              " <tf.Tensor: shape=(), dtype=float32, numpy=0.45617512>]"
             ]
           },
           "metadata": {
@@ -5324,10 +5343,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4Zh6R3N_Nygk",
-        "outputId": "45e2d13e-9e59-44a6-c22c-cbba7b452c98"
+        "outputId": "3295144f-79b0-4b7b-9774-69fb7f2e988a"
       },
       "source": [
-        "for epoch in range(100):\n",
+        "for epoch in range(MAX_EPOCH):\n",
         "  # Reset the metrics at the start of the next epoch\n",
         "  train_loss.reset_states()\n",
         "  train_accuracy.reset_states()\n",
@@ -5354,9 +5373,9 @@
         "      f'lr1: {lr1:.5f}, '\n",
         "      f'lr2: {lr2:.5f}, '\n",
         "      f'Loss: {train_loss.result():.2f}, '  \n",
-        "      f'Accuracy: {train_accuracy.result() * 100}, '  \n",
-        "      f'Test Loss: {test_loss.result()}, '\n",
-        "      f'Test Accuracy: {test_accuracy.result() * 100}'\n",
+        "      f'Accuracy: {train_accuracy.result() * 100:.2f}, '  \n",
+        "      f'Test Loss: {test_loss.result():.2f}, '\n",
+        "      f'Test Accuracy: {test_accuracy.result() * 100:.2f}'\n",
         "    )"
       ],
       "execution_count": 24,
@@ -5364,16 +5383,16 @@
         {
           "output_type": "stream",
           "text": [
-            "Epoch 10, lr1: 0.00059, lr2: 0.00595, Loss: 0.73, Accuracy: 100.0, Test Loss: 3.360870122909546, Test Accuracy: 10.756123542785645\n",
-            "Epoch 20, lr1: 0.00044, lr2: 0.00439, Loss: 0.71, Accuracy: 100.0, Test Loss: 3.2434065341949463, Test Accuracy: 12.069578170776367\n",
-            "Epoch 30, lr1: 0.00035, lr2: 0.00354, Loss: 0.69, Accuracy: 100.0, Test Loss: 3.153266191482544, Test Accuracy: 15.761448860168457\n",
-            "Epoch 40, lr1: 0.00030, lr2: 0.00299, Loss: 0.69, Accuracy: 100.0, Test Loss: 3.064415216445923, Test Accuracy: 20.234291076660156\n",
-            "Epoch 50, lr1: 0.00026, lr2: 0.00261, Loss: 0.69, Accuracy: 100.0, Test Loss: 2.8747811317443848, Test Accuracy: 25.843095779418945\n",
-            "Epoch 60, lr1: 0.00023, lr2: 0.00232, Loss: 0.68, Accuracy: 100.0, Test Loss: 2.758716583251953, Test Accuracy: 32.09087371826172\n",
-            "Epoch 70, lr1: 0.00021, lr2: 0.00210, Loss: 0.68, Accuracy: 100.0, Test Loss: 2.6014950275421143, Test Accuracy: 38.83563995361328\n",
-            "Epoch 80, lr1: 0.00019, lr2: 0.00192, Loss: 0.69, Accuracy: 100.0, Test Loss: 2.4757325649261475, Test Accuracy: 43.80546951293945\n",
-            "Epoch 90, lr1: 0.00018, lr2: 0.00178, Loss: 0.68, Accuracy: 100.0, Test Loss: 2.332671642303467, Test Accuracy: 48.349308013916016\n",
-            "Epoch 100, lr1: 0.00017, lr2: 0.00166, Loss: 0.68, Accuracy: 100.0, Test Loss: 2.205167770385742, Test Accuracy: 51.7216911315918\n"
+            "Epoch 10, lr1: 0.00059, lr2: 0.00595, Loss: 0.72, Accuracy: 100.00, Test Loss: 3.50, Test Accuracy: 4.76\n",
+            "Epoch 20, lr1: 0.00044, lr2: 0.00439, Loss: 0.70, Accuracy: 100.00, Test Loss: 3.49, Test Accuracy: 5.01\n",
+            "Epoch 30, lr1: 0.00035, lr2: 0.00354, Loss: 0.69, Accuracy: 100.00, Test Loss: 3.40, Test Accuracy: 7.74\n",
+            "Epoch 40, lr1: 0.00030, lr2: 0.00299, Loss: 0.69, Accuracy: 100.00, Test Loss: 3.34, Test Accuracy: 11.75\n",
+            "Epoch 50, lr1: 0.00026, lr2: 0.00261, Loss: 0.69, Accuracy: 100.00, Test Loss: 3.14, Test Accuracy: 17.64\n",
+            "Epoch 60, lr1: 0.00023, lr2: 0.00232, Loss: 0.69, Accuracy: 100.00, Test Loss: 2.95, Test Accuracy: 26.16\n",
+            "Epoch 70, lr1: 0.00021, lr2: 0.00210, Loss: 0.68, Accuracy: 100.00, Test Loss: 2.80, Test Accuracy: 35.07\n",
+            "Epoch 80, lr1: 0.00019, lr2: 0.00192, Loss: 0.69, Accuracy: 100.00, Test Loss: 2.58, Test Accuracy: 42.07\n",
+            "Epoch 90, lr1: 0.00018, lr2: 0.00178, Loss: 0.68, Accuracy: 100.00, Test Loss: 2.40, Test Accuracy: 45.83\n",
+            "Epoch 100, lr1: 0.00017, lr2: 0.00166, Loss: 0.68, Accuracy: 100.00, Test Loss: 2.28, Test Accuracy: 48.99\n"
           ],
           "name": "stdout"
         }
@@ -5382,53 +5401,23 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y_3hxbZVZA8H"
+        "id": "wXqpUIcV8S_E"
       },
       "source": [
-        "for epoch in range(100):\n",
-        "  # Reset the metrics at the start of the next epoch\n",
-        "  train_loss.reset_states()\n",
-        "  train_accuracy.reset_states()\n",
-        "  test_loss.reset_states()\n",
-        "  test_accuracy.reset_states()\n",
-        "\n",
-        "  iter_source = iter(dset_loaders[\"source_tr\"])\n",
-        "  for i, _ in enumerate(dset_loaders[\"source_tr\"]):\n",
-        "    inputs_source, labels_source = iter_source.next()\n",
-        "    inputs_source = inputs_source.permute(0, 2, 3, 1)\n",
-        "    train_step(inputs_source.numpy(), labels_source.numpy())\n",
-        "\n",
-        "  if (epoch+1) % 10 == 0 :\n",
-        "    iter_source = iter(dset_loaders[\"test\"])\n",
-        "    for i, _ in enumerate(dset_loaders[\"test\"]):\n",
-        "      inputs_source, labels_source = iter_source.next()\n",
-        "      inputs_source = inputs_source.permute(0, 2, 3, 1)\n",
-        "      test_step(inputs_source.numpy(), labels_source.numpy())\n",
-        "\n",
-        "    lr1 = optimizer1._decayed_lr(tf.float32)\n",
-        "    lr2 = optimizer2._decayed_lr(tf.float32)\n",
-        "    print(\n",
-        "      f'Epoch {epoch + 1}, '\n",
-        "      f'lr1: {lr1:.5f}, '\n",
-        "      f'lr2: {lr2:.5f}, '\n",
-        "      f'Loss: {train_loss.result():.2f}, '  \n",
-        "      f'Accuracy: {train_accuracy.result() * 100}, '  \n",
-        "      f'Test Loss: {test_loss.result()}, '\n",
-        "      f'Test Accuracy: {test_accuracy.result() * 100}'\n",
-        "    )"
+        "#51-52%"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XsAdeelIsgk_"
+        "id": "oPu9N4JWDH9Y"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     }
   ]
